--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="tools/java-cup-11b-runtime.jar"/>
+	<classpathentry kind="lib" path="tools/java-cup-11b.jar"/>
+	<classpathentry kind="lib" path="tools/JFlex.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
